# tcr

./: .gitmodules  CMakeLists.txt  Makefile  README.md  tcr.sublime-project
src/: allocation.cc  allocation.h  color.cc  color.h  fixtures_location.h.in  formats.cc  formats.h  playground.cc  playground.h  ray.cc  ray.h  texture.cc  texture.h  types.cc  types.h  unittests.cc
